[package]
name = "bevy_platformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_rapier2d = "0.25.0"
leafwing-input-manager = "0.13.3"
bevy-inspector-egui = "0.23.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
