[package]
name = "killer_queen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bevy = "0.13.2"
bevy_rapier2d = "0.25.0"
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git", rev = "0115ca456321729633be7af51c282d0f47156988" }
bevy-inspector-egui = "0.23.4"
iyes_perf_ui = "0.2.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Add this to your Cargo.toml
[profile.dev.package.bevy_rapier2d]
opt-level = 3
